# OpenAssetIO-Manager-BAL

./: README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  schema.json
.github/workflows/: build-wheels.yml  code-quality.yml  deploy-pypi.yml  test.yml
plugin/BasicAssetLibrary/: BasicAssetLibraryInterface.py
plugin/openassetio_manager_bal/: BasicAssetLibraryInterface.py  __init__.py  bal.py
tests/: bal_business_logic_suite.py  bal_functional_behaviour_suite.py  conftest.py  fixtures.py  requirements.txt  test_bal.py
tests/resources/: library_apiComplianceSuite.json  library_business_logic_suite_capabilities_all.json  library_business_logic_suite_capabilities_none.json  library_business_logic_suite_customManagementPolicy.json  library_business_logic_suite_managementPolicy_custom.json  library_business_logic_suite_managementPolicy_missing_default.json  library_business_logic_suite_related_references.json  library_business_logic_suite_var_expansion.json
